--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,20 +1,14 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
+title: 'Songwriting, Hidden Gems, and Community'
+date: 2025-12-01
+permalink: /posts/music
 tags:
-  - cool posts
-  - category1
-  - category2
+  - Music
+  - Community
+
 ---
+Throughout my undergrad experience, I made music as a drummer, guitarist, and songwriter and performed in community events. I recorded music for martial arts club demo performances and theme songs for HackMerced [HackMerced Album](https://youtube.com/playlist?list=PLQ4HwrE7SANl4O6Un-mWjGNiZplxQxHjd&si=DNGTp_ugK-ZeacL5) and the STEM Tutoring Center [STEM Tutor Theme Song](https://www.instagram.com/reel/DOeJUyND1tM/?utm_source=ig_web_button_share_sheet&igsh=MzRlODBiNWFlZA==).
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+With my personal projects, I made **4 albums** of various genres (metal [Black/Thrash/Death Metal](https://youtu.be/Nkn5TMK94Hw?si=98WFT5iFKvu09Sav), experimental [Experimental/Noise](https://youtu.be/KFwnEPIzFwc?si=gqnyLvzs9erC4d6Z), ambient [Ambient Project](https://youtu.be/XKuN2_M2U4M), electronic [Electronic Project](https://jetlin.bandcamp.com/album/tragic-inability-to-converse-in-a-cost-effective-manner)) and countless additional songs. My drive for songwriting is exploring music and finding underutilized ideas; my music is the culmination of those ideas presented. This parallels my work with AI for science.
 
-Headings are cool
-======
-
-You can have many headings
-======
-
-Aren't headings cool?
-------
+With pursuing my Computer Science Master's Degree, I will strengthen my research skills and gain a deeper understanding of the AI for Science field to find where more attention and proper AI integration can yield stronger results. I want to take my work of bringing the community to life at UC Merced to my future university and continue to *uplift students by constructing powerful AI systems that improve human capabilities*.
