--- a/_posts/2013-08-14-blog-post-2.md
+++ b/_posts/2013-08-14-blog-post-2.md
@@ -21,3 +21,6 @@ My Workshops:
 5. [FireBase Workshop](https://www.notion.so/503c37fa10244e74926626767a2bd3de?pvs=21)
 
 6. [Figma Workshop](https://docs.google.com/presentation/d/16pDkmwLV6h-oyYfTPn04RYKUk0O2c6mAph6sYMo9YlE/edit?usp=sharing)
+
+[Hackathon Results](https://hackmerced-x.devpost.com/)
+
