hackmerced post images fix

--- a/_posts/2013-08-14-blog-post-2.md
+++ b/_posts/2013-08-14-blog-post-2.md
@@ -8,12 +8,15 @@ tags:
 
 ---
 
+![HackMerced X Background by Marian Zuniga](../images/HM_X_Background.png)
+HackMerced X Background by Marian Zuniga
+
 I brought together the CSE community with my work as the **Executive Director of the HackMerced hackathon**. 
 
 To run **2 main events** (workshop event, and main 36-hour hackathon), I interviewed and assembled **20+ like-minded organizers**, **9+ judges**, and **10+ mentors**. 
 
 ![Most of HackMerced X Organizers + Alumni and more!](../images/Team.jpg)
-
+Most of HackMerced X Organizers + Alumni and more!
 
 I led the logistics team, coordinating with the university to secure permits and rooms, and with MLH to officiate our event. 
 
@@ -21,15 +24,14 @@ I led the logistics team, coordinating with the university to secure permits and
 
 I also created pipelines to intake, process, and inform event registrants. I led the marketing team, running social media, email, flyer, tabling, and class presentation campaigns. 
 
-![HackMerced X Mascot CyberPunk Raccoon by Megan](../images/MeganRaccoon.png)
-
-![HackMerced X Mascot DinoRacoon by Megan](../images/MeganDino.png)
-
-![HackMerced X and STEM Tutoring Center Collaboration Sticker by Emi](../images/CyberSprout.webp)
-
-![HackMerced X Sticker by Allison](../images/Illustration42.png)
-
-![HackMerced X Background by Marian](../images/HM_X_Background.png)
+![HackMerced X Mascot CyberPunk Raccoon by Megan Ciraulo](../images/MeganRaccoon.png)
+HackMerced X Mascot CyberPunk Raccoon by Megan Ciraulo
+![HackMerced X Mascot DinoRacoon by Megan Ciraulo](../images/MeganDino.png)
+HackMerced X Mascot DinoRacoon by Megan Ciraulo
+![HackMerced X and STEM Tutoring Center Collaboration Sticker by Emi Rueth](../images/CyberSprout.webp)
+HackMerced X and STEM Tutoring Center Collaboration Sticker by Emi Rueth
+![HackMerced X Sticker by Alisson Ross](../images/Illustration42.png)
+HackMerced X Sticker by Alisson Ross
 
 
 
@@ -45,9 +47,10 @@ I led the engineering team to develop a main website and an event management web
 
 [Main Website](https://www.hackmerced.com/)
 
-![HackMerced X powered by gobadger.me for Event Management!](badger_scanners.jpg)
-
+![HackMerced X powered by gobadger.me for Event Management!](../images/badger_scanners.jpg)
+HackMerced X powered by gobadger.me for Event Management!
 ![HackMerced X Live Event Management Website Made With Badger LLC by Megan](../images/Frame_6.png )
+HackMerced X Live Event Management Website Made With Badger LLC by Megan
 
 I hosted **27 workshops** from internal organizers, collaborating clubs, sponsors, and guest speakers, including **6 workshops of my own**. 
 
@@ -65,7 +68,8 @@ My Workshops:
 
 6. [Figma Workshop](https://docs.google.com/presentation/d/16pDkmwLV6h-oyYfTPn04RYKUk0O2c6mAph6sYMo9YlE/edit?usp=sharing)
 
-![My Pretraining A Language Model Workshop!](../images/LLM_Workshop)
+![My Pretraining A Language Model Workshop!](../images/LLM_Workshop.jpg)
+My Pretraining A Language Model Workshop!
 
 The event drew **180+ participants** who generated **35+ projects**. I documented the process and trained the next organizer cohort, building the foundation that allowed the next team to run an additional **10-hour hackathon**, along with the main 36-hour hackathon.
 
