adding workshop, recent work, and L-Game info

--- a/_posts/2013-08-14-blog-post-2.md
+++ b/_posts/2013-08-14-blog-post-2.md
@@ -9,7 +9,7 @@ tags:
 ---
 
 ![HackMerced X Background by Marian Zuniga](../images/HM_X_Background.png)
-HackMerced X Background by Marian Zuniga
+HackMerced X Background by Marian Zuniga and Lauren Hur
 
 I brought together the CSE community with my work as the **Executive Director of the HackMerced hackathon**. 
 
@@ -69,10 +69,13 @@ My Workshops:
 6. [Figma Workshop](https://docs.google.com/presentation/d/16pDkmwLV6h-oyYfTPn04RYKUk0O2c6mAph6sYMo9YlE/edit?usp=sharing)
 
 ![My Pretraining A Language Model Workshop!](../images/LLM_Workshop.jpg)
-My Pretraining A Language Model Workshop!
 
-The event drew **180+ participants** who generated **35+ projects**. I documented the process and trained the next organizer cohort, building the foundation that allowed the next team to run an additional **10-hour hackathon**, along with the main 36-hour hackathon.
+Some comments about my Pretraining A Language Model Workshop:
+Initially, I found machine learning daunting and questioned whether I could understand such a complex field. I decided to dive headfirst into Andrej Karpathy's ML videos, expecting to grasp only surface concepts. I was surprised to follow along and complete the video, earning a solid understanding of pretraining a language model. 
+
+Inspired by this experience, I created a HackMerced workshop to help others overcome the intimidation of learning ML. I developed the 2 hour workshop using pedagogical methods I learned from 8+ years of teaching martial arts and tutoring CSE and Math students. I used scaffolding examples and analogies to help students connect the same dots I did. With 50+ students, we learned transformer architecture, implemented ML optimization techniques, and pretrained a language model wrapped in a Gradio web interface. The excitement of seeing their own language model generating text just like ChatGPT motivated students to continue learning ML, with some students asking me additional questions after class.
+
 
 [Hackathon Results](https://hackmerced-x.devpost.com/)
 
-
+The event drew **180+ participants** who generated **35+ projects**. I documented the process and trained the next organizer cohort, building the foundation that allowed the next team to run an additional **10-hour hackathon**, along with the main 36-hour hackathon.
